<resources>
    <string name="app_name">GoodsFinder</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="where_found">Where is found</string>
    <string name="when_found">When is found</string>
    <string name="who_found">Who found</string>
    <string name="where_take">Where can the good be taken</string>
    <string name="save">Save</string>

    <string name="select_photo">Выбрать фото</string>
    <string-array name="select_photo">
        <item>Камера</item>
        <item>Галерея</item>
    </string-array>

    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="delete_confirmation">Are you sure you want to delete this good permanently?</string>
    <string name="edit_confirmation">Are you sure you want to save changes?</string>
    <string name="open_photo">Open photo</string>

    <string-array name="sort">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>By date asc</item>
        <item>By date desc</item>
    </string-array>
</resources>